--- a/app/src/main/res/layout/quote_credit_save_item_list.xml
+++ b/app/src/main/res/layout/quote_credit_save_item_list.xml
@@ -31,6 +31,7 @@
             android:layout_weight="1"
             android:text="type"
             android:textAlignment="viewStart"
+            android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -42,6 +43,7 @@
             android:layout_weight="1"
             android:text="-"
             android:textAlignment="center"
+            android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -52,6 +54,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:text="name"
+            android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -87,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/credit_value"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -95,6 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/quote_credit_hint"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
     </LinearLayout>
 
@@ -112,6 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/interest_value"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -120,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/interest_value_hint"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
 
         <TextView
@@ -128,6 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/months"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -136,6 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/months_number_hint"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
     </LinearLayout>
 
@@ -153,6 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/capital_value"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -160,7 +170,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/interest_value_hint" />
+            android:text="@string/interest_value_hint"
+            android:textColor="@android:color/primary_text_dark" />
     </LinearLayout>
 
     <LinearLayout
@@ -177,6 +188,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/interest_value"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -184,7 +196,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/interest_value_hint" />
+            android:text="@string/interest_value_hint"
+            android:textColor="@android:color/primary_text_dark" />
     </LinearLayout>
 
     <LinearLayout
@@ -201,6 +214,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/quote_credit"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="bold" />
 
         <TextView
@@ -209,6 +223,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/quote_credit_hint"
+            android:textColor="@android:color/primary_text_dark"
             android:textStyle="italic" />
     </LinearLayout>
 
