--- a/app/src/main/res/layout-land/buys_credit_card.xml
+++ b/app/src/main/res/layout-land/buys_credit_card.xml
@@ -8,6 +8,16 @@
     android:layout_margin="@dimen/margin_border_layout"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -57,7 +67,7 @@
 
         <TextView
             android:id="@+id/lDate"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/bought_date_time"
@@ -65,13 +75,28 @@
 
         <EditText
             android:id="@+id/dtBought"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
             android:hint="@string/format_date"
             android:inputType="date"
             android:textAlignment="textEnd" />
+
+        <TextView
+            android:id="@+id/lNameItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="@string/product_name"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etNameItem"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="@string/name" />
     </LinearLayout>
 
     <LinearLayout
@@ -83,21 +108,6 @@
         app:layout_constraintTop_toBottomOf="@+id/llDate"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/lNameItem"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/product_name"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/etNameItem"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/product_name" />
     </LinearLayout>
 
     <LinearLayout
@@ -111,67 +121,69 @@
 
         <TextView
             android:id="@+id/lProductValue"
-            android:layout_width="261dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
             android:text="@string/product_value"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etProductValue"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/product_value"
+            android:hint="@string/money_hint"
             android:inputType="numberSigned"
             android:textAlignment="textEnd" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutTax"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linerLayoutValues"
-        tools:layout_editor_absoluteX="1dp">
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="138dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="5dp"
             android:text="@string/tax"
             android:textAlignment="viewStart"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/etTaxBought"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="0.0"
+            android:hint="@string/interest_value_hint"
             android:inputType="numberSigned"
             android:textAlignment="textEnd" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="5dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/percent_symbol" />
+            android:text="@string/months"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etMonths"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/months_number_hint"
+            android:inputType="number|textPersonName"
+            android:textAlignment="textEnd" />
     </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayoutTax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/linerLayoutValues"
+                tools:layout_editor_absoluteX="1dp">
+
+            </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -182,26 +194,6 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutTax"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/months"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/etMonths"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/months_number"
-            android:inputType="number|textPersonName"
-            android:textAlignment="textEnd" />
     </LinearLayout>
 
     <LinearLayout
@@ -215,24 +207,35 @@
 
         <TextView
             android:id="@+id/lQuoteValue"
-            android:layout_width="81dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
             android:text="@string/quotes_value"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/etQuoteValue"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
             android:hint="@string/quotes_value"
             android:inputType="number|textPersonName"
             android:textAlignment="textEnd" />
+
+        <TextView
+            android:id="@+id/lbRecurrentQuoteValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="@string/recurrent"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/cbRecurrent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -242,20 +245,6 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutQuoteValue">
 
-        <TextView
-            android:id="@+id/lbRecurrentQuoteValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:text="@string/recurrent"
-            android:textStyle="bold" />
-
-        <CheckBox
-            android:id="@+id/cbRecurrent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -282,5 +271,6 @@
             android:text="@string/clear"
             app:icon="@drawable/ic_baseline_cleaning_services_24" />
     </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
