--- a/app/src/main/res/layout-land/quote_credit.xml
+++ b/app/src/main/res/layout-land/quote_credit.xml
@@ -8,6 +8,16 @@
     android:layout_margin="@dimen/margin_border_layout"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -38,14 +48,15 @@
             android:paddingLeft="10dp"
             android:paddingTop="13dp"
             android:paddingRight="10dp"
-            android:text="@string/credit_value" />
+            android:text="@string/credit_value"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etNameItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:hint="@string/credit_value"
+            android:hint="@string/money_hint"
             android:inputType="numberSigned" />
     </LinearLayout>
 
@@ -60,35 +71,48 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="138dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:autoText="false"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingRight="10dp"
             android:text="@string/tax"
-            android:textAlignment="viewStart" />
+            android:textAlignment="viewStart"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etTax"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="0.0"
+            android:hint="@string/interest_value_hint"
             android:inputType="numberDecimal"
             android:textAlignment="textEnd" />
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="5dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/percent_symbol" />
+            android:text="@string/percent_symbol"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="5dp"
+            android:text="@string/months"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etMonths"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/months_number_hint"
+            android:inputType="number|textPersonName" />
     </LinearLayout>
 
     <LinearLayout
@@ -100,24 +124,6 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/months" />
-
-        <EditText
-            android:id="@+id/etMonths"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/months_number"
-            android:inputType="number|textPersonName" />
     </LinearLayout>
 
     <LinearLayout
@@ -155,7 +161,8 @@
             android:layout_weight="2"
             android:paddingLeft="10dp"
             android:text="@string/quote_value"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView10"
@@ -164,7 +171,8 @@
             android:layout_weight="1"
             android:text="$"
             android:textAlignment="textEnd"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvQuoteValue"
@@ -201,5 +209,6 @@
             android:text="@string/clear"
             app:icon="@drawable/ic_baseline_cleaning_services_24" />
     </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
