--- a/app/src/main/res/layout-sw600dp/credit_card_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/credit_card_item_list.xml
@@ -33,17 +33,19 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/cut_off_day"
+                android:textColor="@android:color/primary_text_dark"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvCutOffDayICC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:text="@string/months_number_hint"
                 android:textAlignment="textEnd"
+                android:textColor="@android:color/primary_text_dark"
                 android:textStyle="italic" />
 
             <TextView
@@ -53,6 +55,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="10"
                 android:text="@string/product_name"
+                android:textColor="@android:color/primary_text_dark"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -63,16 +66,18 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/status"
+                android:textColor="@android:color/primary_text_dark"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvStatusICC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="center_vertical"
+                android:layout_weight="1"
                 android:text="@string/months_number_hint"
                 android:textAlignment="textEnd"
+                android:textColor="@android:color/primary_text_dark"
                 android:textStyle="italic" />
 
             <TextView
@@ -83,6 +88,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:text="@string/warning_quote_value"
+                android:textColor="@android:color/primary_text_dark"
                 android:textStyle="bold" />
 
             <TextView
@@ -92,7 +98,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="2"
                 android:text="@string/money_hint"
-                android:textAlignment="textEnd" />
+                android:textAlignment="textEnd"
+                android:textColor="@android:color/primary_text_dark" />
 
             <ImageButton
                 android:id="@+id/btnEditICC"
